# genai-playlist

./: README.md
backend/: .env  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/services/: openai_service.py  playlist_service.py  search_service.py  spotify_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: PlaylistConfirmation.tsx  PlaylistDraft.tsx  SpotifyAuth.tsx
frontend/src/services/: api.ts
